<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

<!--    Top banner-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/black">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/red_dwarf_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bebas_neue"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:text="@string/red_dwarf_shopping"
            android:textSize="60sp" />

    </LinearLayout>

<!--    Shopping cart-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/architects_daughter"
            android:textAlignment="center"
            android:layout_margin="10dp"
            android:text="@string/sales_pitch"
            android:textSize="16sp" />

        <Button
            android:id="@+id/basket_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/shoppingcart"
            android:contentDescription="check shoppingcart"
            android:drawableEnd="@drawable/shoppingcart"/>

    </LinearLayout>

<!--    Google search-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/search_on_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/search_online_text"
            android:textAlignment="center"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_google_text"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:fontFamily="@font/architects_daughter"
                android:hint="@string/input_hint"
                android:inputType="text" />

            <Button
                android:id="@+id/google_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bebas_neue"
                android:layout_marginStart="25dp"
                android:drawableEnd="@drawable/search"
                android:text="@string/google" />
        </LinearLayout>

    </LinearLayout>

<!--    List of products-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/architects_daughter"
            android:layout_margin="10dp"
            android:text="@string/selection" />

        <ListView
            android:id="@+id/product_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</LinearLayout>