<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/show_product_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ShowProductActivity">
    <!--    Top banner-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/red_dwarf_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/bebas_neue"
            android:text="@string/red_dwarf_shopping"
            android:textColor="@color/white"
            android:textSize="60sp" />
    </LinearLayout>

    <!--    Close basket btn-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <Button
            android:id="@+id/close_product_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/close"
            android:contentDescription="@string/close_button" />

    </LinearLayout>

    <!--    product-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="400dp"
            android:layout_height="400dp" />

        <LinearLayout
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/bebas_neue"
                android:text="@string/name_of_product"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:text="@string/product_description"
                android:textAlignment="center"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/product_quote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:layout_margin="10dp"
                android:textSize="30sp"
                android:text="@string/product_related_quote"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/product_series_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:layout_margin="10dp"
                android:textSize="30sp"
                android:text="@string/the_series_where_the_product_first_appeared"
                android:textAlignment="center" />


            <TextView
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/architects_daughter"
                android:layout_margin="10dp"
                android:text="@string/price"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>