<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/toast_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:fontFamily="@font/bebas_neue"
        android:contentDescription="@string/login_title"
        android:text="@string/welcome"
        android:textSize="50sp"/>


    <!--    login image-->
    <ImageView
        android:id="@+id/login_image"
        android:layout_width="600dp"
        android:layout_height="600dp" />

    <!-- Username EditText -->
    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:fontFamily="@font/baskervville"
        android:hint="Username"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="40sp" />

    <!-- Password EditText -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:fontFamily="@font/baskervville"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="40sp" />

    <!-- Login Button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/red"
            android:contentDescription="@string/login"
            android:fontFamily="@font/bebas_neue"
            android:text="Login"
            android:textSize="30sp" />

    </LinearLayout>


</LinearLayout>